--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  functions = "netlify/functions"
-  publish = "."
+functions = "netlify/functions"
 
-[dev]
-  command = "npm start"
+[[redirects]]
+from = "/.netlify/functions/*"
+to = "/.netlify/functions/:splat"
+status = 200
