--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-functions = "netlify/functions"
-publish = "."
+  functions = "netlify/functions"
+  publish = "."
+
+[dev]
+  command = "npm start"
